# protobuf-parser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml
benches/: parser.rs
proto/bench/: README.md
proto/tests/: comments.proto  dev.proto  enum.proto  extensions.proto  import.proto  keywords.proto  message-empty.proto  message-inner.proto  message.proto  oneof.proto  options.proto  package-complex.proto  package-simple.proto  required.proto  service.proto
src/: ast.rs  lexer.rs  lib.rs  parser.rs  proto.lalrpop  tests.rs
