[package]
name = "protobuf-parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["protobuf", "parser"]
categories = ["parser-implementations"]
description = "A Protocol Buffers (proto2/proto3) parser that produces a typed AST with comments"
repository = "https://github.com/n08i40k/protobuf-parser"
readme = "README.md"

[dependencies]
lalrpop-util = { version = "*", features = ["lexer"] }
logos = { version = "*", features = ["logos-derive"] }
ownable = "1"

[build-dependencies]
lalrpop = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "parser"
harness = false
