[package]
name = "protobuf-ast-parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["protobuf", "ast", "parser"]
categories = ["parser-implementations"]
description = "A Protocol Buffers (proto2/proto3) parser that produces a typed AST with comments"
repository = "https://github.com/n08i40k/protobuf-parser"
readme = "README.md"

[dependencies]
lalrpop-util = { version = "0.22", features = ["lexer"] }
logos = { version = "0.16", features = ["logos-derive"] }
ownable = "1.0"

[build-dependencies]
lalrpop = "0.22"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "parser"
harness = false
